export class CommonSettingConstant {
  public static GRPC_COMMON_SETTING_BOT_TOKEN = 'GRPC_COMMON_SETTING_BOT_TOKEN'
  public static GRPC_COMMON_SETTING_BOT_PACKAGE = 'list_bot_setting'
  public static GRPC_COMMON_SETTING_BOT_SERVICE = 'ListBotSetting'

  public static GRPC_COMMON_SETTING_COIN = 'COIN_SETTING_PACKAGE'
  public static GRPC_COMMON_SETTING_COIN_PACKAGE = 'coin'

  public static GRPC_COMMON_SETTING_AUTO_ADD = 'AUTO_ADD_SETTING_PACKAGE'
  public static GRPC_COMMON_SETTING_AUTO_ADD_PACKAGE = 'auto_add'

  public static GRPC_LANGUAGE_SETTING_TOKEN = 'GRPC_LANGUAGE_SETTING_TOKEN'
  public static GRPC_LANGUAGE_SETTING_SERVICE = 'LanguageSettingService'
  public static GRPC_LANGUAGE_SETTING_PACKAGE = 'language'

  public static GRPC_FUTURES_SETTING_TOKEN = 'GRPC_FUTURES_SETTING_TOKEN'
  public static GRPC_FUTURES_SETTING_SERVICE = 'FuturesSettingService'
  public static GRPC_FUTURES_SETTING_PACKAGE = 'futures.v1'
}
